--- a/scry/Cargo.toml
+++ b/scry/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "scry"
-version = "0.1.0"
+version = "1.0.1"
 edition = "2021"
 description = "MTG data ETL management tool"
 
@@ -27,6 +27,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tokio = { version = "1.0", features = ["full"] }
 tokio-util = { version = "0.7.15", features = ["compat", "io"] }
+openssl = { version = "0.10", features = ["vendored"] }
 
 [dependencies.clap]
 version = "4.0"
