--- a/scry/Cargo.toml
+++ b/scry/Cargo.toml
@@ -18,7 +18,7 @@ chrono-tz = "0.8"
 dialoguer = "0.11.0"
 dotenvy = "0.15"
 futures = "0.3.31"
-reqwest = { version = "0.12", features = ["json", "stream"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
 rust_decimal = { version = "1.0", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -27,7 +27,6 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tokio = { version = "1.0", features = ["full"] }
 tokio-util = { version = "0.7.15", features = ["compat", "io"] }
-openssl = { version = "0.10", features = ["vendored"] }
 
 [dependencies.clap]
 version = "4.0"
