--- a/scry/Cargo.toml
+++ b/scry/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "scry"
-version = "0.1.0"
+version = "2.0.0"
 edition = "2021"
 description = "MTG data ETL management tool"
 
@@ -18,7 +18,7 @@ chrono-tz = "0.8"
 dialoguer = "0.11.0"
 dotenvy = "0.15"
 futures = "0.3.31"
-reqwest = { version = "0.12", features = ["json", "stream"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
 rust_decimal = { version = "1.0", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
