--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,4 +1,17 @@
 services:
+  # Database migrations - runs before web starts
+  migrate:
+    image: postgres:15-alpine
+    env_file:
+      - .env
+    depends_on:
+      postgres: 
+        condition: service_healthy
+    volumes:
+      - ./docker/postgres/migrations:/migrations:ro
+    entrypoint: [ "/migrations/run_migrations.sh" ]
+    restart: "no"
+
   # Web Application
   web:
     image: ghcr.io/matthewdtowles/i-want-my-mtg/web:latest
@@ -13,6 +26,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      migrate:
+        condition: service_completed_successfully
     restart: unless-stopped
     logging:
       driver: "json-file"
@@ -31,6 +46,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      migrate:
+        condition: service_completed_successfully
     profiles: [ "etl" ]
     restart: "no"
     logging:
@@ -50,28 +67,13 @@ services:
       - .env
     volumes:
       - postgres_prod_data:/var/lib/postgresql/data
-      - ./docker/postgres/init:/docker-entrypoint-initdb.d/
+      - ./docker/postgres/init:/docker-entrypoint-initdb. d/
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
       interval: 10s
       timeout: 5s
       retries: 5
-    restart: unless-stopped
-
-  migrate:
-    image: postgres:15-alpine
-    env_file:
-      - .env
-    depends_on:
-      postgres:
-        condition: service_healthy
-    volumes:
-      - ./docker/postgres/migrations:/migrations:ro
-    entrypoint: [ "/migrations/run_migrations.sh" ]
-    profiles: [ "migrate" ]
-    restart: "no"
+    restart:  unless-stopped
 
 volumes:
   postgres_prod_data:
-
-    # No networks - handled by Docker Compose by default
