--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-        "test": "jest",
-        "test:watch": "jest --watch",
+        "test": "jest --maxWorkers=50%",
+        "test:watch": "jest --watch --maxWorkers=25%",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
         "test:e2e": "jest --config ./test/jest-e2e.json",
@@ -132,6 +132,10 @@
         ],
         "testMatch": [
             "<rootDir>/test/**/*.spec.ts"
-        ]
+        ],
+        "maxWorkers": "50%",
+        "testTimeout": 10000,
+        "cache": true,
+        "cacheDirectory": ".jest-cache"
     }
 }
