feat: implement email verification for user registration
- Added nodemailer dependency for sending emails.
- Created EmailModule and EmailService to handle email functionalities.
- Introduced PendingUser entity and repository for managing pending user registrations.
- Implemented PendingUserService for creating and managing pending users.
- Updated UserOrchestrator to initiate signup and send verification emails.
- Added verification logic in UserOrchestrator to handle email verification.
- Created new DTOs for verification results and updated user creation flow.
- Added views for email verification result and verification sent notifications.
- Implemented tests for the new signup and verification functionalities.

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,12 @@ POSTGRES_DB=redacted
 POSTGRES_USER=redacted
 POSTGRES_PASSWORD=redacted
 DATABASE_URL=postgresql://user:pwd@postgres:0000/postgres_db
+
+# Email Configuration
+SMTP_HOST=smtp.example.com
+SMTP_PORT=000
+SMTP_SECURE=false
+SMTP_USER=your-email@example.com
+SMTP_PASS=your-password
+SMTP_FROM=noreply@iwantmymtg.com
+APP_URL=http://localhost:3000
