--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "express-handlebars": "^7.1.2",
         "handlebars": "^4.7.8",
         "nestjs-command": "^3.1.4",
+        "nodemailer": "^7.0.13",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
