--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.14",
         "@types/node": "^20.3.1",
+        "@types/nodemailer": "^7.0.9",
         "@types/passport-jwt": "^4.0.1",
         "@types/passport-local": "^1.0.38",
         "@types/stream-chain": "^2.1.0",
