--- a/.env.example
+++ b/.env.example
@@ -24,5 +24,5 @@ SMTP_PORT=000
 SMTP_SECURE=false
 SMTP_USER=your-email@example.com
 SMTP_PASS=your-password
-SMTP_FROM=noreply@iwantmymtg.com
-APP_URL=http://localhost:3000
+SMTP_FROM=noreply@iwantmymtg.net
+APP_URL=https://iwantmymtg.net
