--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,79 +1,86 @@
 services:
-  # Database migrations - runs before web starts
-  migrate:
-    image: postgres:15-alpine
-    env_file:
-      - .env
-    depends_on:
-      postgres: 
-        condition: service_healthy
-    volumes:
-      - ./docker/postgres/migrations:/migrations:ro
-    entrypoint: [ "/migrations/run_migrations.sh" ]
-    restart: "no"
+    # Database migrations - runs before web starts
+    migrate:
+        image: postgres:15-alpine
+        env_file:
+            - .env
+        depends_on:
+            postgres:
+                condition: service_healthy
+        volumes:
+            - ./docker/postgres/migrations:/migrations:ro
+        entrypoint: ['/migrations/run_migrations.sh']
+        restart: 'no'
 
-  # Web Application
-  web:
-    image: ghcr.io/matthewdtowles/i-want-my-mtg/web:latest
-    ports:
-      - "80:3000"
-    environment:
-      - DATABASE_URL=${DATABASE_URL}
-      - NODE_ENV=${NODE_ENV}
-      - JWT_SECRET=${JWT_SECRET}
-    env_file:
-      - .env
-    depends_on:
-      postgres:
-        condition: service_healthy
-      migrate:
-        condition: service_completed_successfully
-    restart: unless-stopped
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
+    # Web Application
+    web:
+        image: ghcr.io/matthewdtowles/i-want-my-mtg/web:latest
+        ports:
+            - '80:3000'
+        environment:
+            - DATABASE_URL=${DATABASE_URL}
+            - NODE_ENV=${NODE_ENV}
+            - JWT_SECRET=${JWT_SECRET}
+            - SMTP_HOST=${SMTP_HOST}
+            - SMTP_PORT=${SMTP_PORT}
+            - SMTP_SECURE=${SMTP_SECURE:-false}
+            - SMTP_USER=${SMTP_USER:-}
+            - SMTP_PASS=${SMTP_PASS:-}
+            - SMTP_FROM=${SMTP_FROM}
+            - APP_URL=${APP_URL}
+        env_file:
+            - .env
+        depends_on:
+            postgres:
+                condition: service_healthy
+            migrate:
+                condition: service_completed_successfully
+        restart: unless-stopped
+        logging:
+            driver: 'json-file'
+            options:
+                max-size: '10m'
+                max-file: '3'
 
-  # Scry - ETL Application
-  etl:
-    image: ghcr.io/matthewdtowles/i-want-my-mtg/etl:latest
-    environment:
-      - DATABASE_URL=${DATABASE_URL}
-      - SCRY_LOG=${SCRY_LOG}
-    env_file:
-      - .env
-    depends_on:
-      postgres:
-        condition: service_healthy
-      migrate:
-        condition: service_completed_successfully
-    profiles: [ "etl" ]
-    restart: "no"
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
+    # Scry - ETL Application
+    etl:
+        image: ghcr.io/matthewdtowles/i-want-my-mtg/etl:latest
+        environment:
+            - DATABASE_URL=${DATABASE_URL}
+            - SCRY_LOG=${SCRY_LOG}
+        env_file:
+            - .env
+        depends_on:
+            postgres:
+                condition: service_healthy
+            migrate:
+                condition: service_completed_successfully
+        profiles: ['etl']
+        restart: 'no'
+        logging:
+            driver: 'json-file'
+            options:
+                max-size: '10m'
+                max-file: '3'
 
-  # PostgreSQL Database (shared by web and etl)
-  postgres:
-    image: postgres:15-alpine
-    environment:
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    env_file:
-      - .env
-    volumes:
-      - postgres_prod_data:/var/lib/postgresql/data
-      - ./docker/postgres/init:/docker-entrypoint-initdb. d/
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    restart:  unless-stopped
+    # PostgreSQL Database (shared by web and etl)
+    postgres:
+        image: postgres:15-alpine
+        environment:
+            - POSTGRES_DB=${POSTGRES_DB}
+            - POSTGRES_USER=${POSTGRES_USER}
+            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+        env_file:
+            - .env
+        volumes:
+            - postgres_prod_data:/var/lib/postgresql/data
+            - ./docker/postgres/init:/docker-entrypoint-initdb.d/
+        healthcheck:
+            test: ['CMD-SHELL', 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}']
+            interval: 10s
+            timeout: 5s
+            retries: 5
+        restart: unless-stopped
 
 volumes:
-  postgres_prod_data:
+    postgres_prod_data:
