--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "express-handlebars": "^7.1.2",
         "handlebars": "^4.7.8",
         "nestjs-command": "^3.1.4",
+        "nodemailer": "^7.0.13",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
@@ -74,6 +75,7 @@
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.14",
         "@types/node": "^20.3.1",
+        "@types/nodemailer": "^7.0.9",
         "@types/passport-jwt": "^4.0.1",
         "@types/passport-local": "^1.0.38",
         "@types/stream-chain": "^2.1.0",
