--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1",
         "stream-json": "^1.9.1",
-        "typeorm": "^0.3.20"
+        "typeorm": "^0.3.20",
+        "uuid": "^13.0.0"
     },
     "devDependencies": {
         "@nestjs/cli": "^10.4.4",
@@ -81,6 +82,7 @@
         "@types/stream-chain": "^2.1.0",
         "@types/stream-json": "^1.7.8",
         "@types/supertest": "^6.0.0",
+        "@types/uuid": "^10.0.0",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "@typescript-eslint/parser": "^6.21.0",
         "autoprefixer": "^10.4.21",
